syntax = "proto3";

//import "nanopb.proto";
//option (nanopb_fileopt).packed_struct = true;
//python generator/nanopb_generator.py ../buzzcam/protobuf/message.proto -I ../buzzcam/protobuf
//protoc message.proto --python_out=./ -I=./
/**************/

message PacketHeader {
    uint32 system_uid = 1;
    uint32 ms_from_start = 2;
    uint64 epoch = 3;
}

message Location{
    float lat = 1;
    float lon = 2;
    float elev = 3;
}

message RadioPower{
    int32 rssi = 1;
    int32 snr = 2;
    int32 rssi_est = 3;
}

message SDCardState{
    uint32 space_remaining = 1;
    uint32 total_space = 2;
}

message SystemSummaryPacket{
    float classifier_version = 1;
    Location location = 2;
    optional uint64 epoch_last_detection = 3;
    uint32 transmission_interval_m = 4; // minutes
    optional uint32 buzz_count_interval = 5;
    optional uint32 species_1_count_interval = 6;
    optional uint32 species_2_count_interval = 7;
    optional SDCardState sd_card = 8;
    optional RadioPower radio_power = 9;
    float battery_voltage = 10;
    float temperature = 11;
    float humidity = 12;
    optional float gas = 13;
}

message LoRaPacket {
    PacketHeader header = 1;

    oneof payload {
        SystemSummaryPacket system_summary_packet = 2;
    }
}
